--- a/import-service/package.json
+++ b/import-service/package.json
@@ -25,8 +25,13 @@
     "@types/serverless": "^1.72.5",
     "aws-sdk": "^2.792.0",
     "aws-sdk-mock": "^5.1.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.6.1",
+    "prettier": "^2.2.0",
     "serverless-offline": "^6.8.0",
     "serverless-webpack": "^5.2.0",
     "ts-jest": "^26.4.3",
