--- a/import-service/package.json
+++ b/import-service/package.json
@@ -4,7 +4,9 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "test": "npx jest"
+    "test": "npx jest",
+    "lint": "eslint handlers/**/*.ts",
+    "prettier": "prettier --write handlers/**/*.ts"
   },
   "dependencies": {
     "@middy/core": "^1.4.0",
@@ -12,11 +14,14 @@
     "@middy/http-error-handler": "^1.4.0",
     "@middy/http-json-body-parser": "^1.4.0",
     "@middy/http-security-headers": "^1.4.0",
+    "@middy/input-output-logger": "^1.4.0",
     "@middy/validator": "^1.4.0",
+    "ajv": "^6.12.6",
     "csv-parser": "^2.3.3",
     "http-errors": "^1.8.0",
     "serverless-dotenv-plugin": "^3.1.0",
-    "source-map-support": "^0.5.10"
+    "source-map-support": "^0.5.10",
+    "strip-bom-stream": "^4.0.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
