--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,7 +4,9 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "test": "npx jest"
+    "test": "npx jest",
+    "lint": "eslint --write handlers/**/*.ts",
+    "prettier": "prettier --write --write handlers/**/*.ts"
   },
   "dependencies": {
     "@middy/core": "^1.4.0",
@@ -12,6 +14,7 @@
     "@middy/http-error-handler": "^1.4.0",
     "@middy/http-json-body-parser": "^1.4.0",
     "@middy/http-security-headers": "^1.4.0",
+    "@middy/input-output-logger": "^1.4.0",
     "@middy/sqs-partial-batch-failure": "^1.4.0",
     "@middy/validator": "^1.4.0",
     "http-errors": "^1.8.0",
@@ -25,8 +28,13 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^10.12.18",
     "@types/serverless": "^1.72.5",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.6.1",
+    "prettier": "^2.2.0",
     "serverless-offline": "^6.8.0",
     "serverless-webpack": "^5.2.0",
     "ts-jest": "^26.4.3",
