feat: add dockerfile and dockerignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ jspm_packages
 **/.serverless
 **/.env
 **/node_modules
+
+# Elastic Beanstalk Files
+**/.elasticbeanstalk/*
+**/!.elasticbeanstalk/*.cfg.yml
+**/!.elasticbeanstalk/*.global.yml
